fix: resolve remaining audit findings (DynamoDB, CI/CD, versions, action pins)

--- a/iac/terraform/16-jp-audit/code/templates/パラメータ一覧.md
+++ b/iac/terraform/16-jp-audit/code/templates/パラメータ一覧.md
@@ -159,13 +159,16 @@
 
 ---
 
-## 7. DynamoDB パラメータ（State Lock）
+## 7. State Locking パラメータ
+
+> **Note**: Terraform 1.10+ では S3 原生锁定（`use_lockfile = true`）を使用します。
 
 | パラメータ名 | 値 | 備考 |
 |-------------|---|------|
-| billing_mode | PAY_PER_REQUEST | オンデマンド |
-| hash_key | LockID | |
-| point_in_time_recovery | true | PITR 有効 |
+| use_lockfile | true | S3 原生 锁定 |
+| lock file | .tflock | S3 上に作成 |
+
+**旧方式（参考）**: Terraform 1.9 以下では別の方式を使用していました
 
 ---
 
@@ -190,11 +193,15 @@
         "ec2:Describe*",
         "rds:Describe*",
         "s3:Get*",
-        "s3:List*",
-        "dynamodb:GetItem",
-        "dynamodb:DescribeTable"
+        "s3:List*"
       ],
       "Resource": "*"
+    },
+    {
+      "Sid": "StateLocking",
+      "Effect": "Allow",
+      "Action": ["s3:GetObject"],
+      "Resource": "arn:aws:s3:::STATE_BUCKET/*.tflock"
     }
   ]
 }
